<resources>
    <string name="app_name">Teste</string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="cont">Continue</string>
    <string name="tittlelogin">School Friends</string>
    <string name="logout">Log out</string>
    <string name="tittleupdate">Update User</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="tittlenew">New User</string>
    <string name="welcome">Welcome</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="share">Share</string>
    <string name="alert">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="masc">Masculino</string>
    <string name="fem">Feminino</string>
    <string name="sexo">Sexo: </string>
    <string name="password">Password</string>
    <string name="date">Data de Nascimento</string>
    <string name="erro">Password ou Email errado</string>
</resources>