<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/titlenew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittlenew"
                android:textSize="50sp"
                android:layout_marginTop="45dp"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/user"/>

            <EditText
                android:id="@+id/eName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/eNumber"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/number"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/eEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/eDate"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/date"
                android:layout_marginTop="15dp"/>


            <RadioGroup
                android:id="@+id/rg_sexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/rbfem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fem" />

                <RadioButton
                    android:id="@+id/rbmasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masc" />
            </RadioGroup>

            <EditText
                android:id="@+id/ePass"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@color/greenbtn"
                    />

                <Button
                    android:id="@+id/btnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginLeft="150dp"
                    android:background="@color/redbtn"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>