<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/titlenew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="50sp"
                android:layout_marginTop="45dp"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="350dp"
                android:layout_height="180dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"/>



            <EditText
                android:id="@+id/etEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginTop="15dp"/>


            <EditText
                android:id="@+id/etPass"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="90dp">

                <Button
                    android:id="@+id/btnUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/greenbtn"
                    android:text="@string/login"
                    />

                <Button
                    android:id="@+id/btnCan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/redbtn"
                    android:text="@string/cancel"
                    android:layout_marginLeft="100dp"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>